--- a/calculos/app/src/main/AndroidManifest.xml
+++ b/calculos/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.Calculos"
         tools:targetApi="31">
         <activity
+            android:name=".Tela4"
+            android:exported="false" />
+        <activity
+            android:name=".Tela3"
+            android:exported="false" />
+        <activity
             android:name=".Tela2"
             android:exported="false" />
         <activity
