--- a/calculos/settings.gradle
+++ b/calculos/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Calculos"
+rootProject.name = "calculos"
 include ':app'
